// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form/Input Basic 1`] = `
<div>
  <div
    className="input-field"
  >
    <i
      className="material-icons prefix"
    >
      account_circle
    </i>
    <input
      className="validate"
      data-length={10}
      disabled={false}
      id="input"
      onChange={[Function]}
      placeholder="Placeholder"
      type="text"
      value="foo"
    />
    <label
      className="active"
      htmlFor="input"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`Storyshots Form/Input Character Counter 1`] = `
<div>
  <div
    className="input-field"
  >
    <input
      aria-label="Character Count Input"
      className="validate"
      data-length={10}
      disabled={false}
      id="input"
      onChange={[Function]}
      type="text"
      value="foo"
    />
  </div>
</div>
`;

exports[`Storyshots Form/Input Custom Error or Success Messages 1`] = `
<div>
  <div
    className="input-field"
  >
    <input
      aria-label="Errors and Messages"
      className="validate"
      disabled={false}
      id="input"
      onChange={[Function]}
      type="text"
      value="foo"
    />
  </div>
</div>
`;

exports[`Storyshots Form/Input File Input 1`] = `
<div>
  <div
    className="file-field input-field undefined"
  >
    <div
      className="btn"
    >
      <span>
        File
      </span>
      <input
        aria-label="File Input"
        disabled={false}
        multiple={false}
        onChange={[Function]}
        type="file"
      />
    </div>
    <div
      className="file-path-wrapper"
    >
      <input
        aria-label="File Input"
        className="file-path validate"
        disabled={false}
        placeholder="Placeholder"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Form/Input Textarea 1`] = `
<div>
  <div
    className="input-field"
  >
    <textarea
      aria-label="Text Area Input"
      className="validate materialize-textarea"
      disabled={false}
      id="input"
      onChange={[Function]}
      type="text"
      value="foo"
    />
  </div>
</div>
`;
